--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
   <h1>Tracks</h1>
   <label for="interpret">Interpret</label>
-  <input type=text id='interpret' value='Attwenger'>
+  <input type=text id='interpret' value='Radiohead'>
   <label for="album">Album</label>
-  <input type="text" id="album">
-  <button id='ok'>OK</button>
+  <input type="text" id="album" value="OK Computer">
+  <button id='ok' disabled>OK</button>
+  <div id="result"></div>
 </body>
 </html>
