--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style.css">
   <script src="assets/script.js" defer></script>
   <title>Spot</title>
 </head>
 <body>
   <h1>Tracks</h1>
+  <section i=''>
   <label for="interpret">Interpret</label>
   <input type=text id='interpret' value='Radiohead'>
   <label for="album">Album</label>
   <input type="text" id="album" value="OK Computer">
   <button id='ok' disabled>OK</button>
-  <div id="result"></div>
+  </section>
+  <section id="result"></section>
 </body>
 </html>
